infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: e-commerce
  name: ingress
spec:
  ingressClassName: nginx
  rules:
    - host: hk-test.com
      http:
        paths:
          - path: /cart
            pathType: Prefix
            backend:
              service:
                name: cart-service
                port:
                  number: 8080
          - path: /products
            pathType: Prefix
            backend:
              service:
                name: products-service
                port:
                  number: 5000
          - path: /deals
            pathType: Prefix
            backend:
              service:
                name: products-service
                port:
                  number: 5000
          - path: /search
            pathType: Prefix
            backend:
              service:
                name: search-service
                port:
                  number: 4000
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: users-service
                port:
                  number: 9090
          - path: /
            pathType: Prefix
            backend:
              service:
                name: store-ui-service
                port:
                  number: 80
